src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/Adjustable__c.field-meta.xml
<CustomField>
    <fullName>Adjustable__c</fullName>
    <formula>IF(AND( OR(Adjustment_Quantity__c &lt;&gt; 0,  Adjustment_Per_Unit__c &lt;&gt; 0), Product__c != null,  Warehouse__c != null, Product__r.AcctSeed__Inventory_Product__c,   Matched_With_Product__c,  !Serialized__c,  !Lot_Tracked__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustable</label>
    <type>Checkbox</type>
</CustomField>