src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/Adjustment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Quantity__c</fullName>
    <label>Adjustment Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>