src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Import Adjustment Quantities</relationshipLabel>
    <relationshipName>Import_Adjustment_Quantities</relationshipName>
    <type>Lookup</type>
</CustomField>