src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/Inventory_Non_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Non_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory/Non-Inventory</label>
    <type>Checkbox</type>
</CustomField>