src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/Negative_Quantity_Error__c.field-meta.xml
<CustomField>
    <fullName>Negative_Quantity_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative Quantity Error</label>
    <type>Checkbox</type>
</CustomField>