src/Base/main/default/objects/Inventory_Adjustment_Import__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Inventory_Adjustment_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>