src/Base/main/default/objects/Inventory_Adjustment_Import__c/listViews/Adjustable.listView-meta.xml
<ListView>
    <fullName>Adjustable</fullName>
    <columns>NAME</columns>
    <columns>Adjustable__c</columns>
    <columns>Adjusted__c</columns>
    <columns>Adjustment_Per_Unit__c</columns>
    <columns>Adjustment_Quantity__c</columns>
    <columns>Inventory_Non_Inventory__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Warehouse_Text__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjustable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Adjustable</label>
</ListView>