src/Base/main/default/objects/Inventory_Adjustment_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adjustable__c</columns>
    <columns>Adjustment_Per_Unit__c</columns>
    <columns>Adjustment_Quantity__c</columns>
    <columns>Inventory_Non_Inventory__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>Warehouse__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>GL_Account_Variable_1__c</columns>
    <columns>GL_Account_Variable_2__c</columns>
    <columns>Matched_With_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>