src/Base/main/default/objects/Inventory_Adjustment_Import__c/listViews/Same_Code_Name.listView-meta.xml
<ListView>
    <fullName>Same_Code_Name</fullName>
    <columns>NAME</columns>
    <columns>Adjusted__c</columns>
    <columns>Has_Inbound__c</columns>
    <columns>Inventory_Non_Inventory__c</columns>
    <columns>Adjustment_Per_Unit__c</columns>
    <columns>Adjustment_Quantity__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Warehouse_Text__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjusted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Has_Inbound__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Adjusted with Inbound</label>
</ListView>